--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
 
-<p>The aim is to introduce advanced inferential methods, ranging from classical multiple testing to post-selection inference and variable selection procedures for high-dimensional data.</p>
+<p>The main goal of this course is to expose students to modern ideas in statistical inference, ranging from classical multiple testing to post-selection inference and variable selection procedures for high-dimensional data.</p>
 <div id="last-announcements" class="section level2">
 <h2>Last announcements</h2>
 <ul>
@@ -45,7 +45,7 @@
 <th></th>
 <th>Hours</th>
 <th></th>
-<th>Topics</th>
+<th>Topic</th>
 <th></th>
 </tr>
 </thead>
@@ -73,7 +73,7 @@
 <td></td>
 <td>13:30-16:30 (3h)</td>
 <td></td>
-<td>TBD</td>
+<td>The Crisis of Modern Science</td>
 <td></td>
 </tr>
 <tr class="odd">
@@ -99,7 +99,7 @@
 <td></td>
 <td>13:30-16:30 (3h)</td>
 <td></td>
-<td>TBD</td>
+<td>High-Dimensional Statistics</td>
 <td></td>
 </tr>
 <tr class="odd">
@@ -112,7 +112,7 @@
 <td></td>
 <td>9:30-11:30 (2h)</td>
 <td></td>
-<td>TBD</td>
+<td>Global Null Testing</td>
 <td></td>
 </tr>
 <tr class="even">
@@ -125,7 +125,7 @@
 <td></td>
 <td>11:30-16:30 (3h)</td>
 <td></td>
-<td>TBD</td>
+<td>FWER control: Bonferroni</td>
 <td></td>
 </tr>
 <tr class="odd">
@@ -151,7 +151,7 @@
 <td></td>
 <td>13:30-16:30 (3h)</td>
 <td></td>
-<td>TBD</td>
+<td>FDR control: Benjamini-Hochberg</td>
 <td></td>
 </tr>
 <tr class="odd">
@@ -164,7 +164,7 @@
 <td></td>
 <td>9:30-11:30 (2h)</td>
 <td></td>
-<td>TBD</td>
+<td>Uniform Bounds for the FDP</td>
 <td></td>
 </tr>
 <tr class="even">
@@ -177,7 +177,7 @@
 <td></td>
 <td>11:30-16:30 (3h)</td>
 <td></td>
-<td>TBD</td>
+<td>High-Dimensional Inference</td>
 <td></td>
 </tr>
 <tr class="odd">
@@ -203,7 +203,7 @@
 <td></td>
 <td>13:30-15:30 (2h)</td>
 <td></td>
-<td>TBD</td>
+<td>Modern Methods for Variable Selection</td>
 <td></td>
 </tr>
 </tbody>
@@ -213,16 +213,170 @@
 <div id="program" class="section level2">
 <h2>Program</h2>
 <ul>
-<li><p>The crisis of modern science and selective inference</p></li>
-<li><p>The multiple testing problem: methods for familywise error rate and false discovery rate control</p></li>
-<li><p>The post-hoc inference problem: simultaneous confidence bounds for the false discovery proportion</p></li>
-<li><p>The variable selection problem: sample-splitting inference, stability selection and knockoffs</p></li>
+<li>The Crisis of Modern Science
+<ul>
+<li>Scientific studies</li>
+<li>The likelihood of false discoveries</li>
+<li>The likelihood of replicating discoveries</li>
+</ul></li>
+<li>The Law of Selection
+<ul>
+<li>The Baltimore stockbroker scam (survivorship bias)</li>
+<li>Democrats vs. Republicans: which is better for the U.S. Economy? (p-hacking)</li>
+<li>A quiet scandal in the statistical community (post-selection inference)</li>
+<li>Eat Ketchup and Pizza and avoid Prostate Cancer (HARKing)</li>
+<li>AIDSVAX vaccine study (unplanned subgroup analysis)</li>
+<li>The dead salmon study (large-scale testing)</li>
+</ul></li>
+<li>High-Dimensional Statistics
+<ul>
+<li>Classical versus high-dimensional theory</li>
+<li>Linear discriminant analysis in high dimensions</li>
+<li>What can help us in high dimensions? Sparsity</li>
+<li>High-dimensional regression: the failure of least squares and the behaviour of the Lasso</li>
+</ul></li>
+<li>Global Null Testing
+<ul>
+<li>Hypothesis testing: a stochastic proof by contradiction</li>
+<li>The <span class="math inline">\(p\)</span>-value</li>
+<li>Maximum statistic, sum of statistics and the Higher Criticism</li>
+<li>Error rates</li>
+</ul></li>
+<li>FamilyWise Error Rate control: Bonferroni
+<ul>
+<li>Bonferroni inequality</li>
+<li>Holm procedure</li>
+</ul></li>
+<li>False Discovery Rate control: Benjamini-Hochberg
+<ul>
+<li>Benjamini-Hochberg procedure</li>
+<li>Benjamini-Yekutieli procedure</li>
+<li>False coverage control</li>
+</ul></li>
+<li>Uniform Bounds for the False Discovery Proportion
+<ul>
+<li>Post-hoc inference</li>
+<li>Closed testing with Simes local tests</li>
+</ul></li>
+<li>High-Dimensional Inference
+<ul>
+<li>Sample-splitting</li>
+</ul></li>
+<li>Modern Methods for Variable Selection
+<ul>
+<li>Stability Selection</li>
+<li>The Knockoff Filter</li>
+</ul></li>
 </ul>
+</div>
+<div id="homeworks" class="section level2">
+<h2>Homeworks</h2>
+<table>
+<thead>
+<tr class="header">
+<th></th>
+<th>N</th>
+<th></th>
+<th>Date</th>
+<th></th>
+<th>Deadline</th>
+<th></th>
+<th>Text</th>
+<th></th>
+<th></th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+</tr>
+<tr class="even">
+<td></td>
+<td>1</td>
+<td></td>
+<td>27/03/2020</td>
+<td></td>
+<td>03/04/2020</td>
+<td></td>
+<td><a href>HW1</a></td>
+<td></td>
+<td></td>
+</tr>
+<tr class="odd">
+<td></td>
+<td>2</td>
+<td></td>
+<td>30/03/2020</td>
+<td></td>
+<td>06/04/2020</td>
+<td></td>
+<td><a href>HW2</a></td>
+<td></td>
+<td></td>
+</tr>
+<tr class="even">
+<td></td>
+<td>3</td>
+<td></td>
+<td>03/04/2020</td>
+<td></td>
+<td>10/04/2020</td>
+<td></td>
+<td><a href>HW3</a></td>
+<td></td>
+<td></td>
+</tr>
+<tr class="odd">
+<td></td>
+<td>4</td>
+<td></td>
+<td>06/04/2020</td>
+<td></td>
+<td>17/04/2020</td>
+<td></td>
+<td><a href>HW4</a></td>
+<td></td>
+<td></td>
+</tr>
+<tr class="even">
+<td></td>
+<td>5</td>
+<td></td>
+<td>10/04/2020</td>
+<td></td>
+<td>17/04/2020</td>
+<td></td>
+<td><a href>HW5</a></td>
+<td></td>
+<td></td>
+</tr>
+</tbody>
+</table>
 </div>
 <div id="exam" class="section level2">
 <h2>Exam</h2>
-<p>Oral examination. For attending students, the oral examination may be replaced by a written examination (only for the first two exam sessions).</p>
-<p>Schedule:</p>
+<p>Two options:</p>
+<ol style="list-style-type: decimal">
+<li><p>Oral examination</p></li>
+<li><p>Homeworks and (shorter) oral examination.</p></li>
+</ol>
+<p>For the homeworks:</p>
+<ul>
+<li><p>Students can partecipate in groups (max. 3 persons)</p></li>
+<li><p>There will be 5 homeworks; the lowest score will be dropped in the final grade</p></li>
+<li><p>Each homework has a deadline: solutions should be submitted via e-mail (late submissions will <em>not</em> be accepted)</p></li>
+</ul>
+<p><!-- For attending students, the oral examination may be replaced by a written examination (only for the first two exam sessions). --></p>
+<p>Exam schedule:</p>
 <table>
 <thead>
 <tr class="header">
@@ -255,7 +409,7 @@
 <td></td>
 <td>1</td>
 <td></td>
-<td>28/4/2020</td>
+<td>28/04/2020</td>
 <td></td>
 <td>TBD</td>
 <td></td>
@@ -267,7 +421,7 @@
 <td></td>
 <td>2</td>
 <td></td>
-<td>25/6/2020</td>
+<td>25/06/2020</td>
 <td></td>
 <td>TBD</td>
 <td></td>
@@ -279,7 +433,7 @@
 <td></td>
 <td>3</td>
 <td></td>
-<td>9/7/2020</td>
+<td>09/07/2020</td>
 <td></td>
 <td>TBD</td>
 <td></td>
@@ -291,7 +445,7 @@
 <td></td>
 <td>4</td>
 <td></td>
-<td>22/9/2020</td>
+<td>22/09/2020</td>
 <td></td>
 <td>TBD</td>
 <td></td>
@@ -302,11 +456,11 @@
 </tbody>
 </table>
 </div>
-<div id="additional-references" class="section level2">
-<h2>Additional references</h2>
+<div id="textbooks" class="section level2">
+<h2>Textbooks</h2>
 <ul>
-<li><p>Efron, Hastie (2016) Computer-Age Statistical Inference: Algorithms, Evidence, and Data Science. Cambridge University Press. Chapters 15, 20</p></li>
-<li><p>Wainwright (2019) High-Dimensional Statistics: A Non-Asymptotic Viewpoint. Cambridge University Press. Chapter 1</p></li>
+<li>Efron, Hastie (2016) Computer-Age Statistical Inference: Algorithms, Evidence, and Data Science. Cambridge University Press. Chapters 15, 20</li>
+<li>Wainwright (2019) High-Dimensional Statistics: A Non-Asymptotic Viewpoint. Cambridge University Press. Chapter 1</li>
 </ul>
 </div>
 <div id="acknowledgements" class="section level2">
