--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <div id="last-announcements" class="section level2">
 <h2>Last announcements</h2>
 <ul>
-<li>no news</li>
+<li>Per formare i gruppi per gli Homework, si prega di compilare il seguente <a href="https://docs.google.com/forms/d/e/1FAIpQLSftmyHrsyr9fkBnWjg2L-QFodD2X5BZL1qyOFYeUD3ZDv727Q/viewform?usp=sf_link">FORM</a></li>
 </ul>
 </div>
 <div id="calendar" class="section level2">
@@ -224,7 +224,7 @@
 <li>The Baltimore stockbroker scam (survivorship bias)</li>
 <li>Democrats vs. Republicans: which is better for the U.S. Economy? (p-hacking)</li>
 <li>A quiet scandal in the statistical community (post-selection inference)</li>
-<li>Eat Ketchup and Pizza and avoid Prostate Cancer (HARKing)</li>
+<li>Eat Pizza and avoid Prostate Cancer</li>
 <li>AIDSVAX vaccine study (unplanned subgroup analysis)</li>
 <li>The dead salmon study (large-scale testing)</li>
 </ul></li>
