--- a/index.html
+++ b/index.html
@@ -229,12 +229,12 @@
 <li>AIDSVAX vaccine study (unplanned subgroup analysis)</li>
 <li>The dead salmon study (large-scale testing)</li>
 </ul></li>
-<li>High-Dimensional Statistics
+<li><a href="docs/slides/3_hds.pdf">High-Dimensional Statistics</a>
 <ul>
 <li>Classical versus high-dimensional theory</li>
 <li>Linear discriminant analysis in high dimensions</li>
 <li>What can help us in high dimensions? Sparsity</li>
-<li>High-dimensional regression: the failure of least squares and the behaviour of the Lasso</li>
+<li>High-dimensional regression: the behaviour of the Lasso</li>
 </ul></li>
 <li>Global Null Testing
 <ul>
