--- a/index.html
+++ b/index.html
@@ -236,15 +236,15 @@
 <li>What can help us in high dimensions? Sparsity</li>
 <li>High-dimensional regression: the behaviour of the Lasso</li>
 </ul></li>
-<li>Global Null Testing
+<li><a href="(docs/slides/4_glob.pdf)">Global Null Testing</a>
 <ul>
 <li>Hypothesis testing: a stochastic proof by contradiction</li>
 <li>The <span class="math inline">\(p\)</span>-value</li>
 <li>Maximum statistic, sum of statistics and the Higher Criticism</li>
-<li>Error rates</li>
 </ul></li>
 <li>FamilyWise Error Rate control: Bonferroni
 <ul>
+<li>Error rates</li>
 <li>Bonferroni inequality</li>
 <li>Holm procedure</li>
 </ul></li>
@@ -320,7 +320,7 @@
 <td></td>
 <td>10/04/2020</td>
 <td></td>
-<td><a href>HW2</a></td>
+<td><a href="docs/hw/hw2.pdf">HW2</a></td>
 <td></td>
 <td></td>
 </tr>
