--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 <li>What can help us in high dimensions? Sparsity</li>
 <li>High-dimensional regression: the behaviour of the Lasso</li>
 </ul></li>
-<li><a href="(docs/slides/4_glob.pdf)">Global Null Testing</a>
+<li><a href="docs/slides/4_glob.pdf">Global Null Testing</a>
 <ul>
 <li>Hypothesis testing: a stochastic proof by contradiction</li>
 <li>The <span class="math inline">\(p\)</span>-value</li>
