--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 <li>The <span class="math inline">\(p\)</span>-value</li>
 <li>Maximum statistic, sum of statistics and the Higher Criticism</li>
 </ul></li>
-<li>FamilyWise Error Rate control: Bonferroni
+<li><a href="docs/slides/5_fwer.pdf">FamilyWise Error Rate control: Bonferroni</a> [<a href="docs/code/5_fwer.R">R</a>]
 <ul>
 <li>Error rates</li>
 <li>Bonferroni inequality</li>
@@ -332,7 +332,7 @@
 <td></td>
 <td>10/04/2020</td>
 <td></td>
-<td><a href>HW3</a></td>
+<td><a href="docs/hw/hw3.pdf">HW3</a></td>
 <td></td>
 <td></td>
 </tr>
