--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <div id="last-announcements" class="section level2">
 <h2>Last announcements</h2>
 <ul>
-<li>Per formare i gruppi per gli Homework, si prega di compilare il seguente <a href="https://docs.google.com/forms/d/e/1FAIpQLSftmyHrsyr9fkBnWjg2L-QFodD2X5BZL1qyOFYeUD3ZDv727Q/viewform?usp=sf_link">FORM</a></li>
+<li>No news</li>
 </ul>
 </div>
 <div id="calendar" class="section level2">
@@ -242,13 +242,13 @@
 <li>The <span class="math inline">\(p\)</span>-value</li>
 <li>Maximum statistic, sum of statistics and the Higher Criticism</li>
 </ul></li>
-<li><a href="docs/slides/5_fwer.pdf">FamilyWise Error Rate control: Bonferroni</a> [<a href="docs/code/5_fwer.R">R</a>]
+<li><a href="docs/slides/5_fwer.pdf">FamilyWise Error Rate control</a> [<a href="docs/code/5_fwer.R">R</a>]
 <ul>
 <li>Error rates</li>
 <li>Bonferroni inequality</li>
 <li>Holm procedure</li>
 </ul></li>
-<li>False Discovery Rate control: Benjamini-Hochberg
+<li><a href="docs/slides/6_fdr.pdf">False Discovery Rate control</a>
 <ul>
 <li>Benjamini-Hochberg procedure</li>
 <li>Benjamini-Yekutieli procedure</li>
@@ -340,7 +340,7 @@
 <td></td>
 <td>4</td>
 <td></td>
-<td>06/04/2020</td>
+<td>07/04/2020</td>
 <td></td>
 <td>17/04/2020</td>
 <td></td>
@@ -370,6 +370,8 @@
 <li><p>It is encouraged to discuss the problem sets with others, but every group needs to turn in a unique write-up. Use of sources (people, books, internet and so on) without citing them in homework sets results in failing grade</p></li>
 <li><p>At the end of the homeworks, each member must fill a peer rating form of team members. The individual score will be the team score adjusted based on peer ratings</p></li>
 <li><p>All students must follow a code of conduct, which covers issues such as plagiarism, falsification, unauthorized assistance, cheating, and other grievous acts of academic dishonesty</p></li>
+<li><p>Name your files HM[N]_[GroupName] where [N] is the homework number and [GroupName] is your group name</p></li>
+<li><p><a href="docs/hw/groups.pdf">List of groups</a></p></li>
 </ul>
 </div>
 <div id="exam" class="section level2">
@@ -385,7 +387,6 @@
 <li><p>There will be 5 homeworks; the lowest score will be dropped in the final grade</p></li>
 <li><p>Each homework has a deadline: solutions should be submitted via e-mail (late submissions will <em>not</em> be accepted)</p></li>
 </ul>
-<p><!-- For attending students, the oral examination may be replaced by a written examination (only for the first two exam sessions). --></p>
 <p>Exam schedule:</p>
 <table>
 <thead>
