--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 <td></td>
 <td>6</td>
 <td></td>
-<td>7/4/2020</td>
+<td>9/4/2020</td>
 <td></td>
 <td>U7-17</td>
 <td></td>
@@ -254,10 +254,9 @@
 <li>Benjamini-Yekutieli procedure</li>
 <li>False coverage control</li>
 </ul></li>
-<li>Uniform Bounds for the False Discovery Proportion
+<li><a href="docs/slides/7_posthoc.pdf">Uniform Bounds for the False Discovery Proportion</a>
 <ul>
-<li>Post-hoc inference</li>
-<li>Closed testing with Simes local tests</li>
+<li>Post-hoc inference <!-- - Closed testing with Simes local tests --></li>
 </ul></li>
 <li>High-Dimensional Inference
 <ul>
@@ -340,11 +339,11 @@
 <td></td>
 <td>4</td>
 <td></td>
-<td>07/04/2020</td>
+<td>09/04/2020</td>
 <td></td>
 <td>21/04/2020</td>
 <td></td>
-<td><a href>HW4</a></td>
+<td><a href="docs/hw/hw4.pdf">HW4</a></td>
 <td></td>
 <td></td>
 </tr>
@@ -354,7 +353,7 @@
 <td></td>
 <td>17/04/2020</td>
 <td></td>
-<td>21/04/2020</td>
+<td>24/04/2020</td>
 <td></td>
 <td><a href>HW5</a></td>
 <td></td>
