--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
 <td></td>
 <td>24/04/2020</td>
 <td></td>
-<td><a href>HW5</a></td>
+<td><a href="docs/hw/hw5.pdf">HW5</a></td>
 <td></td>
 <td></td>
 </tr>
