--- a/index.html
+++ b/index.html
@@ -24,380 +24,72 @@
 
 
 
-<p>The main goal of this course is to expose students to modern ideas in statistical inference, ranging from classical multiple testing to post-selection inference and variable selection procedures for high-dimensional data.</p>
-<div id="last-announcements" class="section level2">
-<h2>Last announcements</h2>
+<p>Corso di Laurea Magistrale in Scienze Statistiche ed Economiche, Università degli Studi di Milano-Bicocca, A.A. 2020/21.</p>
+<div id="calendario-delle-lezioni-e-materiale-didattico" class="section level2">
+<h2>Calendario delle lezioni e materiale didattico</h2>
 <ul>
-<li>No news</li>
-</ul>
-</div>
-<div id="calendar" class="section level2">
-<h2>Calendar</h2>
-<table>
-<thead>
-<tr class="header">
-<th></th>
-<th>N</th>
-<th></th>
-<th>Date</th>
-<th></th>
-<th>Room</th>
-<th></th>
-<th>Hours</th>
-<th></th>
-<th>Topic</th>
-<th></th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-</tr>
-<tr class="even">
-<td></td>
-<td>1</td>
-<td></td>
-<td>27/3/2020</td>
-<td></td>
-<td>U7-17</td>
-<td></td>
-<td>13:30-16:30 (3h)</td>
-<td></td>
-<td>The Crisis of Modern Science</td>
-<td></td>
-</tr>
-<tr class="odd">
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-</tr>
-<tr class="even">
-<td></td>
-<td>2</td>
-<td></td>
-<td>30/3/2020</td>
-<td></td>
-<td>U7-17</td>
-<td></td>
-<td>13:30-16:30 (3h)</td>
-<td></td>
-<td>High-Dimensional Statistics</td>
-<td></td>
-</tr>
-<tr class="odd">
-<td></td>
-<td>3</td>
-<td></td>
-<td>31/3/2020</td>
-<td></td>
-<td>U7-17</td>
-<td></td>
-<td>9:30-11:30 (2h)</td>
-<td></td>
-<td>Global Null Testing</td>
-<td></td>
-</tr>
-<tr class="even">
-<td></td>
-<td>4</td>
-<td></td>
-<td>3/4/2020</td>
-<td></td>
-<td>U7-17</td>
-<td></td>
-<td>11:30-16:30 (3h)</td>
-<td></td>
-<td>FWER control: Bonferroni</td>
-<td></td>
-</tr>
-<tr class="odd">
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-</tr>
-<tr class="even">
-<td></td>
-<td>5</td>
-<td></td>
-<td>6/4/2020</td>
-<td></td>
-<td>U7-17</td>
-<td></td>
-<td>13:30-16:30 (3h)</td>
-<td></td>
-<td>FDR control: Benjamini-Hochberg</td>
-<td></td>
-</tr>
-<tr class="odd">
-<td></td>
-<td>6</td>
-<td></td>
-<td>9/4/2020</td>
-<td></td>
-<td>U7-17</td>
-<td></td>
-<td>9:30-11:30 (2h)</td>
-<td></td>
-<td>Uniform Bounds for the FDP</td>
-<td></td>
-</tr>
-<tr class="even">
-<td></td>
-<td>7</td>
-<td></td>
-<td>17/4/2020</td>
-<td></td>
-<td>U7-17</td>
-<td></td>
-<td>13:30-15:30 (3h)</td>
-<td></td>
-<td>High-Dimensional Inference</td>
-<td></td>
-</tr>
-<tr class="odd">
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-</tr>
-<tr class="even">
-<td></td>
-<td>8</td>
-<td></td>
-<td>20/4/2020</td>
-<td></td>
-<td>U7-17</td>
-<td></td>
-<td>13:30-15:30 (2h)</td>
-<td></td>
-<td>Modern Methods for Variable Selection</td>
-<td></td>
-</tr>
-</tbody>
-</table>
-<p>All of the course material is on the <a href="https://github.com/aldosolari/MI">github repo</a></p>
-</div>
-<div id="program-and-resources" class="section level2">
-<h2>Program and resources</h2>
+<li>L01 (Giovedì 18 Marzo 10:30-13:30) 3h
 <ul>
-<li><p><a href="docs/slides/0_intro.pdf">Course overview</a></p></li>
-<li><a href="docs/slides/1_crisis.pdf">The Crisis of Modern Science</a> [<a href="docs/code/1_crisis.R">R</a>]
-<ul>
-<li>Scientific studies</li>
-<li>The likelihood of false discoveries</li>
-<li>The likelihood of replicating discoveries</li>
+<li></li>
 </ul></li>
-<li><a href="docs/slides/2_lawsel.pdf">The Law of Selection</a> [<a href="docs/code/2_lawsel.R">R</a>]
+<li>L02 (Lunedì 22 Marzo 12:30-15:30) 3h
 <ul>
-<li>The Baltimore stockbroker scam (survivorship bias)</li>
-<li>Democrats vs. Republicans: which is better for the U.S. Economy? (p-hacking)</li>
-<li>A quiet scandal in the statistical community (post-selection inference)</li>
-<li>Eat Pizza and avoid Prostate Cancer</li>
-<li>AIDSVAX vaccine study (unplanned subgroup analysis)</li>
-<li>The dead salmon study (large-scale testing)</li>
+<li></li>
 </ul></li>
-<li><a href="docs/slides/3_hds.pdf">High-Dimensional Statistics</a>
+<li>L03 (Martedì 23 Marzo 9:30-11:30) 2h
 <ul>
-<li>Classical versus high-dimensional theory</li>
-<li>Linear discriminant analysis in high dimensions</li>
-<li>What can help us in high dimensions? Sparsity</li>
-<li>High-dimensional regression: the behaviour of the Lasso</li>
+<li></li>
 </ul></li>
-<li><a href="docs/slides/4_glob.pdf">Global Null Testing</a>
+<li>L04 (Giovedì 25 Marzo 10:30-13:30) 3h
 <ul>
-<li>Hypothesis testing: a stochastic proof by contradiction</li>
-<li>The <span class="math inline">\(p\)</span>-value</li>
-<li>Maximum statistic, sum of statistics and the Higher Criticism</li>
+<li></li>
 </ul></li>
-<li><a href="docs/slides/5_fwer.pdf">FamilyWise Error Rate control</a> [<a href="docs/code/5_fwer.R">R</a>]
+<li>L05 (Lunedì 29 Marzo 12:30-15:30) 3h
 <ul>
-<li>Error rates</li>
-<li>Bonferroni inequality</li>
-<li>Holm procedure</li>
+<li></li>
 </ul></li>
-<li><a href="docs/slides/6_fdr.pdf">False Discovery Rate control</a>
+<li>L06 (Martedì 30 Marzo 9:30-11:30) 2h
 <ul>
-<li>Benjamini-Hochberg procedure</li>
-<li>Benjamini-Yekutieli procedure</li>
-<li>False coverage control</li>
+<li></li>
 </ul></li>
-<li><a href="docs/slides/7_posthoc.pdf">Uniform Bounds for the False Discovery Proportion</a>
+<li>L07 (Giovedì 8 Aprile 10:30-13:30) 3h
 <ul>
-<li>Post-hoc inference <!-- - Closed testing with Simes local tests --></li>
+<li></li>
 </ul></li>
-<li>High-Dimensional Inference
+<li>L08 (Lunedì 12 Aprile 12:30-14:30) 3h
 <ul>
-<li>Sample-splitting</li>
-</ul></li>
-<li>Modern Methods for Variable Selection
-<ul>
-<li>Stability Selection</li>
-<li>The Knockoff Filter</li>
+<li></li>
 </ul></li>
 </ul>
+<p>Se non specificato, la lezione è sincrona.</p>
 </div>
-<div id="homeworks" class="section level2">
-<h2>Homeworks</h2>
-<table>
-<thead>
-<tr class="header">
-<th></th>
-<th>N</th>
-<th></th>
-<th>Date</th>
-<th></th>
-<th>Deadline</th>
-<th></th>
-<th>Text</th>
-<th></th>
-<th></th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-</tr>
-<tr class="even">
-<td></td>
-<td>1</td>
-<td></td>
-<td>27/03/2020</td>
-<td></td>
-<td>06/04/2020</td>
-<td></td>
-<td><a href="docs/hw/hw1.pdf">HW1</a></td>
-<td></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td></td>
-<td>2</td>
-<td></td>
-<td>30/03/2020</td>
-<td></td>
-<td>10/04/2020</td>
-<td></td>
-<td><a href="docs/hw/hw2.pdf">HW2</a></td>
-<td></td>
-<td></td>
-</tr>
-<tr class="even">
-<td></td>
-<td>3</td>
-<td></td>
-<td>03/04/2020</td>
-<td></td>
-<td>14/04/2020</td>
-<td></td>
-<td><a href="docs/hw/hw3.pdf">HW3</a></td>
-<td></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td></td>
-<td>4</td>
-<td></td>
-<td>09/04/2020</td>
-<td></td>
-<td>21/04/2020</td>
-<td></td>
-<td><a href="docs/hw/hw4.pdf">HW4</a></td>
-<td></td>
-<td></td>
-</tr>
-<tr class="even">
-<td></td>
-<td>5</td>
-<td></td>
-<td>17/04/2020</td>
-<td></td>
-<td>24/04/2020</td>
-<td></td>
-<td><a href="docs/hw/hw5.pdf">HW5</a></td>
-<td></td>
-<td></td>
-</tr>
-</tbody>
-</table>
-<p>The rules are the following:</p>
-<ul>
-<li><p>You will have to submit your solution by the deadline. Feel free to choose the format for your solution (.txt, .tex, .pdf etc.), the nicer the better, and the number of files in attachment (one or more, but not too many)</p></li>
-<li><p>Answer with clarity and precision. All R code must be reproducible</p></li>
-<li><p>For theoretical questions, try to provide a well-reasoned mathematical argument. Simulations can help form your intuition; but a purely empirical answer will only receive partial points</p></li>
-<li><p>It is encouraged to discuss the problem sets with others, but every group needs to turn in a unique write-up. Use of sources (people, books, internet and so on) without citing them in homework sets results in failing grade</p></li>
-<li><p>At the end of the homeworks, each member must fill a peer rating form of team members. The individual score will be the team score adjusted based on peer ratings</p></li>
-<li><p>All students must follow a code of conduct, which covers issues such as plagiarism, falsification, unauthorized assistance, cheating, and other grievous acts of academic dishonesty</p></li>
-<li><p>Name your files HM[N]_[GroupName] where [N] is the homework number and [GroupName] is your group name</p></li>
-<li><p><a href="docs/hw/groups.pdf">List of groups</a></p></li>
-</ul>
-</div>
-<div id="exam" class="section level2">
-<h2>Exam</h2>
-<p>Two options:</p>
+<div id="esame" class="section level2">
+<h2>Esame</h2>
+<p>L’esame è composto da due parti:</p>
 <ol style="list-style-type: decimal">
-<li><p>Oral examination</p></li>
-<li><p>Homeworks and (shorter) oral examination.</p></li>
+<li><p>Prova scritta (50%).</p></li>
+<li><p>Analisi dei dati (50%).</p></li>
 </ol>
-<p>For the homeworks:</p>
-<ul>
-<li><p>Students can partecipate in groups (max. 3 persons)</p></li>
-<li><p>There will be 5 homeworks; the lowest score will be dropped in the final grade</p></li>
-<li><p>Each homework has a deadline: solutions should be submitted via e-mail (late submissions will <em>not</em> be accepted)</p></li>
-</ul>
-<p>Exam schedule:</p>
+<p>Il voto finale è dato dalla media dei voti delle parti 1. e 2. Lo studente (oppure il docente) può richiedere la prova orale.</p>
+<div id="analisi-dei-dati" class="section level3">
+<h3>Analisi dei dati</h3>
+</div>
+<div id="prova-scritta" class="section level3">
+<h3>Prova scritta</h3>
+</div>
+<div id="calendario-degli-esami" class="section level3">
+<h3>Calendario degli esami</h3>
 <table>
 <thead>
 <tr class="header">
 <th></th>
-<th>N</th>
+<th>Sessione</th>
 <th></th>
-<th>Date</th>
+<th>Data</th>
 <th></th>
-<th>Room</th>
+<th>Luogo</th>
 <th></th>
-<th>Hour</th>
+<th>Orario</th>
 <th></th>
 <th></th>
 </tr>
@@ -417,21 +109,21 @@
 </tr>
 <tr class="even">
 <td></td>
-<td>1</td>
+<td>Primaverile</td>
 <td></td>
-<td>28/04/2020</td>
+<td>27 Aprile 2021</td>
 <td></td>
-<td>TBD</td>
+<td>Telematica</td>
 <td></td>
-<td>TBD</td>
+<td>14:30</td>
 <td></td>
 <td></td>
 </tr>
 <tr class="odd">
 <td></td>
-<td>2</td>
+<td>Estiva</td>
 <td></td>
-<td>25/06/2020</td>
+<td>22 Giugno 2021</td>
 <td></td>
 <td>TBD</td>
 <td></td>
@@ -441,9 +133,9 @@
 </tr>
 <tr class="even">
 <td></td>
-<td>3</td>
+<td>Estiva</td>
 <td></td>
-<td>09/07/2020</td>
+<td>7 Luglio 2020</td>
 <td></td>
 <td>TBD</td>
 <td></td>
@@ -453,9 +145,9 @@
 </tr>
 <tr class="odd">
 <td></td>
-<td>4</td>
+<td>Estiva</td>
 <td></td>
-<td>22/09/2020</td>
+<td>Settembre</td>
 <td></td>
 <td>TBD</td>
 <td></td>
@@ -466,25 +158,6 @@
 </tbody>
 </table>
 </div>
-<div id="textbooks" class="section level2">
-<h2>Textbooks</h2>
-<ul>
-<li>Efron, Hastie (2016) Computer-Age Statistical Inference: Algorithms, Evidence, and Data Science. Cambridge University Press. Chapters 15, 20</li>
-<li>Wainwright (2019) High-Dimensional Statistics: A Non-Asymptotic Viewpoint. Cambridge University Press. Chapter 1</li>
-</ul>
-</div>
-<div id="acknowledgements" class="section level2">
-<h2>Acknowledgements</h2>
-<p>Much of the course content was inspired by the following courses:</p>
-<ul>
-<li><p><a href="https://statweb.stanford.edu/~candes/teaching/stats300c/">Theory of Statistics</a> by Prof. Emmanuel Candès</p></li>
-<li><p><a href="https://www.stat.cmu.edu/~aramdas/reproducibility19/r19.html">Statistical methods for reproducibility</a> by Prof. Aaditya Ramdas</p></li>
-</ul>
-<p>and on a number of other sources.</p>
-</div>
-<div id="disclaimer" class="section level2">
-<h2>Disclaimer</h2>
-<p>The course material contains images obtained by routine Google Images searches. Some of these images may perhaps be copyright. They are included here for educational noncommercial purposes and are considered to be covered by the doctrine of Fair Use. In any event they are easily available from Google Images. It’s not feasible to give full scholarly credit to the creators of these images. We hope they can be satisfied with the positive role they are playing in the educational process.</p>
 </div>
 
 
